--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,8 +42,7 @@ jobs:
       pull-requests: write
 
     env:
-      NUGET_PACKAGES: ${{ github.workspace }}/.nuget/packages
-
+      _NUGET_PACKAGES: ${{ github.workspace }}/.nuget/packages
     steps:
       - name: Check out repo
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
